tests/snapshots/sfc/ts/script_setup__defineprops_array_syntax.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 106
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { defineComponent as _defineComponent } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "test",
  props: ["msg", "count"],
  setup(__props, { expose: __expose, emit: __emit }) {
    const props = __props;
    const __returned__ = {
      count,
      msg
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($setup.props.msg), 1 /* TEXT */))
}

__sfc__.render = render
export default __sfc__
