tests/snapshots/sfc/ts/script_setup__defineprops_array_syntax_with_destructure_defaults.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString } from "vue"

import { defineComponent as _defineComponent } from 'vue'
import { mergeDefaults as _mergeDefaults } from 'vue'

// Reactive Props Destructure (Vue 3.5+)

const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: /*@__PURE__*/_mergeDefaults(['msg', 'count'], {
  msg: 'hello',
  count: 0
}),
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const __returned__ = {  }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString($props.msg) + " " + _toDisplayString($props.count), 1 /* TEXT */))
}

__sfc__.render = render
export default __sfc__
