tests/snapshots/sfc/ts/script_setup__defineprops_type_only_with_destructure_defaults.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, renderSlot as _renderSlot, normalizeClass as _normalizeClass } from "vue"
import { defineComponent as _defineComponent } from 'vue'
import { mergeDefaults as _mergeDefaults } from 'vue'


// Reactive Props Destructure (Vue 3.5+)

const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: /*@__PURE__*/_mergeDefaults({ appearance: {}, color: {} }, {
  appearance: "filled"
  color: "primary"
}),
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const __returned__ = {  }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("span", {
    class: _normalizeClass([$props.color, $props.appearance])
  }, [
    _renderSlot(_ctx.$slots, "default")
  ], 2 /* CLASS */))
}

__sfc__.render = render
export default __sfc__
